# packedobjectsd

./: .gitignore  LICENSE.txt  Makefile.am  README  configure.ac
doc/: gendoc.sh  tutorial.texi
examples/: Makefile  Makefile.am  README  action.xml  action.xsd  comedy.xml  comedy.xsd  multiple_client.c  multiple_receiver.c  multiple_server.c  podPublisher.c  podResponder.c  podSearcher.c  podSubscriber.c  search.xml  simple-video-client.c  simple-video-server.c  simple_client.c  simple_pub_sub.c  simple_publisher.c  simple_receiver.c  simple_searcher.c  simple_server.c  simple_subscriber.c  video.xml  video.xsd  video_receiver.c  video_searcher.c  video_server.c
examples/helloworld-0.1/: Makefile  configure.ac  helloworld.c  helloworld.xml  helloworld.xsd
examples/helloworld-0.1/src/: Makefile.am  helloworld.xsd  main.c
examples/helloworld-0.2/: configure.ac
examples/helloworld-0.2/src/: Makefile.am  helloworld.xsd  main.c
examples/video-0.1/: Makefile  README  configure.ac  search.xml  video.xml  video_receiver.c  video_searcher.c  video_server.c
examples/video-0.1/src/: Makefile.am  database.xml  search.xml  video.xsd  video_client.c  video_receiver.c  video_responder.c  video_searcher.c  video_server.c
examples/video-0.2/: Makefile  README  configure.ac  database.xml  search.xml  video.xsd  video_client.c  video_searcher.c
examples/video-0.2/src/: Makefile.am  search.xml  video.xml  video.xsd  video_client.c  video_responder.c  video_searcher.c
examples/video-0.3/: Makefile  README  configure.ac  database.xml  video.xsd  video_client.c  video_searcher.c
examples/video-0.3/src/: Makefile.am  database.xml  video.xsd  video_client.c  video_responder.c  video_searcher.c
examples/video-search/: Makefile.am  README  configure.ac
examples/video-search/src/: video.xsd  video_responder.c  video_searcher.c
include/: broker.h  database.h  message.h  packedobjectsd.h
pkgconfig/: libpackedobjectsd.pc  packedobjectsd.pc
schema/: packedobjectsd.xsd  schema.xsd
src/: Makefile.am  address.c  address.h  broker.c  broker.h  client.c  database.c  database.h  forwarder.c  forwarder.h  global.h  heartbeat_Notes.txt  lookup.c  lookup.h  main.c  md5_hash.c  md5_hash.h  message.c  message.h  node.c  old_broker.c  packedobjectsd.c  packedobjectsd.db  packedobjectsd.h  packedobjectsdtest.c  publisher.c  publisher.h  request.c  request.h  response.c  response.h  server.c  server.h  subscriber.c  subscriber.h  xmlschema.h  xmlutils.c  xmlutils.h
test/: pod-test.sh
todo/: todos
